@@ -1,44 +1,87 @@
 package ru.yandex.practicum.filmorate.service;
 
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
+import ru.yandex.practicum.filmorate.model.Genre;
+import ru.yandex.practicum.filmorate.storage.DAO.GenreDbStorage;
+import ru.yandex.practicum.filmorate.storage.DAO.MpaDbStorage;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FilmService {
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+    private final GenreDbStorage genreDbStorage;
+    private final MpaDbStorage mpaDbStorage;
     private static final LocalDate CINEMA_BIRTHDAY = LocalDate.of(1895, 12, 28);
 
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
+    public FilmService(@Qualifier("filmDbStorage") FilmStorage filmStorage,
+                       @Qualifier("userDbStorage") UserStorage userStorage,
+                       GenreDbStorage genreDbStorage,
+                       MpaDbStorage mpaDbStorage) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
+        this.genreDbStorage = genreDbStorage;
+        this.mpaDbStorage = mpaDbStorage;
     }
 
     public Film addFilm(Film film) {
         validateFilm(film);
+
+        // Проверяем MPA
+        if (film.getMpa() == null || !mpaDbStorage.getMpaById(film.getMpa().getId()).isPresent()) {
+            throw new NotFoundException("MPA с id " + (film.getMpa() == null ? null : film.getMpa().getId()) + " не найден.");
+        }
+
+        // Проверяем жанры
+        if (film.getGenres() != null && !film.getGenres().isEmpty()) {
+            for (Genre genre : film.getGenres()) {
+                if (!genreDbStorage.getGenreById(genre.getId()).isPresent()) {
+                    throw new NotFoundException("Жанр с id " + genre.getId() + " не найден.");
+                }
+            }
+        }
+
         return filmStorage.addFilm(film);
     }
 
     public Film updateFilm(Film film) {
-        if (filmStorage.getFilmById(film.getId()) == null) {
-            throw new NotFoundException("Фильм с таким id не найден.");
+        Film existingFilm = filmStorage.getFilmById(film.getId());
+        if (existingFilm == null) {
+            throw new NotFoundException("Фильм с id " + film.getId() + " не найден.");
         }
         validateFilm(film);
+
+        // Проверяем MPA
+        if (film.getMpa() == null || !mpaDbStorage.getMpaById(film.getMpa().getId()).isPresent()) {
+            throw new NotFoundException("MPA с id " + (film.getMpa() == null ? null : film.getMpa().getId()) + " не найден.");
+        }
+
+        // Проверяем жанры
+        if (film.getGenres() != null && !film.getGenres().isEmpty()) {
+            for (Genre genre : film.getGenres()) {
+                if (!genreDbStorage.getGenreById(genre.getId()).isPresent()) {
+                    throw new NotFoundException("Жанр с id " + genre.getId() + " не найден.");
+                }
+            }
+        }
+
         return filmStorage.updateFilm(film);
     }
 
     public Film getFilm(int id) {
         Film film = filmStorage.getFilmById(id);
         if (film == null) {
-            throw new NotFoundException("Фильм с таким id не найден.");
+            throw new NotFoundException("Фильм с id " + id + " не найден.");
         }
         return film;
     }
@@ -50,23 +93,23 @@ public class FilmService {
     public void addLike(int filmId, int userId) {
         Film film = filmStorage.getFilmById(filmId);
         if (film == null) {
-            throw new NotFoundException("Фильм с таким id не найден.");
+            throw new NotFoundException("Фильм с id " + filmId + " не найден.");
         }
         if (userStorage.getUserById(userId) == null) {
-            throw new NotFoundException("Пользователь с таким id не найден.");
+            throw new NotFoundException("Пользователь с id " + userId + " не найден.");
         }
-        film.getLikes().add(userId);
+        filmStorage.addLike(filmId, userId);
     }
 
     public void removeLike(int filmId, int userId) {
         Film film = filmStorage.getFilmById(filmId);
         if (film == null) {
-            throw new NotFoundException("Фильм с таким id не найден.");
+            throw new NotFoundException("Фильм с id " + filmId + " не найден.");
         }
         if (userStorage.getUserById(userId) == null) {
-            throw new NotFoundException("Пользователь с таким id не найден.");
+            throw new NotFoundException("Пользователь с id " + userId + " не найден.");
         }
-        film.getLikes().remove(userId);
+        filmStorage.removeLike(filmId, userId);
     }
 
     public List<Film> getPopularFilms(int count) {
@@ -74,7 +117,7 @@ public class FilmService {
         return films.stream()
                 .sorted(Comparator.comparingInt((Film f) -> f.getLikes().size()).reversed())
                 .limit(count)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void validateFilm(Film film) {
@@ -84,7 +127,10 @@ public class FilmService {
         if (film.getDescription() != null && film.getDescription().length() > 200) {
             throw new ValidationException("Максимальная длина описания — 200 символов.");
         }
-        if (film.getReleaseDate() == null || film.getReleaseDate().isBefore(CINEMA_BIRTHDAY)) {
+        if (film.getReleaseDate() == null) {
+            throw new ValidationException("Дата релиза не может быть пустой.");
+        }
+        if (film.getReleaseDate().isBefore(CINEMA_BIRTHDAY)) {
             throw new ValidationException("Дата релиза — не раньше 28 декабря 1895 года.");
         }
         if (film.getDuration() <= 0) {
